# nbdev-hello-world

./: core.html  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
nbdev_hello_world/: _modidx.py
nbs/: 00_core.ipynb  nbdev.yml
